fixing Guard and Maintenance activities